--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,6 +1,21 @@
 version: 0.2
 
 phases:
+  install:
+    commands:
+      - echo Entered the install phase...
+      - npm install
+  pre_build:
+    commands:
+      - echo Entered the pre_build phase...
   build:
     commands:
-       - npm install && npm run build
+      - echo Entered the build phase...
+      - npm run build
+  post_build:
+    commands:
+      - echo Entered the post_build phase...
+      - echo Build completed on `date`
+artifacts:
+  files:
+    - '**/*'
