--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,10 +29,6 @@ jobs:
     - run: npm ci
     - run: npm run build 
     - run: npm test --if-present
-
-    - name: setup git config
     - run: git config --global user.name "GitHub Actions Bot"
     - run: git config --global user.email "john.c.cartwright@comcast.net"
-    - run: git config --global user.name "Your Name"
-    - name: commit to GH Pages
-      run: sh deploy-to-gh-pages.sh
+    - run: sh deploy-to-gh-pages.sh
