--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,6 +27,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        github_token: ${{ secrets.GITHUB_TOKEN }}
 #         key: ${{ secrets.SSH_PRIVATE_KEY }}
 #         name: id_rsa
     - run: npm ci
@@ -34,4 +35,4 @@ jobs:
     - run: npm test --if-present
     - run: git config --global user.name "GitHub Actions Bot"
     - run: git config --global user.email "john.c.cartwright@comcast.net"
-    # - run: sh deploy-to-gh-pages.sh
+    - run: sh deploy-to-gh-pages.sh
