--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build:aws": "tsc && vite build --config vite.config.aws.js",
+    "build:gh":  "tsc && vite build --config vite.config.gh.js",
     "preview": "vite preview"
   },
   "dependencies": {
