--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,7 @@ phases:
   build:
     commands:
       - echo Entered the build phase...
-      - npm run build
+      - npm run build:aws
   post_build:
     commands:
       - echo Entered the post_build phase...
