--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,7 +27,7 @@ jobs:
         cache: 'npm'
     - run: |
         npm ci
-        npm run build 
+        npm run build:gh 
         npm test --if-present
         
     - name: Deploy
